# newsum

./: .gitignore  NumberCombinationFinder.sln  README.md  run_app.py
NumberCombinationFinder/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  NumberCombinationFinder.csproj
python_app/: main.py  requirements.txt
python_app/handlers/: calc_handler.py  file_handler.py
python_app/ui/: main_window.py
rust_solver/: Cargo.toml  pyproject.toml
rust_solver/src/: bit_enum.rs  branch_bound.rs  dynamic_prog.rs  lib.rs  meet_middle.rs
tests/: test_algorithms.py  test_io.py
